--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       rel="stylesheet"
       href="https://unpkg.com/mockman-js@latest/dist/style.css"
     />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <title>Shoe Plaza</title>
   </head>
   <body>
